--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,9 @@
               "src/assets"
             ],
             "styles": [
+			  "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
 			  "node_modules/angular-bootstrap-md/assets/scss/bootstrap/bootstrap.scss",
-			  "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
+              "node_modules/angular-bootstrap-md/assets/scss/mdb.scss",
               "src/styles.scss"
             ],
             "scripts": []
@@ -94,6 +95,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
             "scripts": []
